--- a/.github/workflows/status.yml
+++ b/.github/workflows/status.yml
@@ -1,10 +1,10 @@
 name: erddap-status
 
-on:
-  schedule:
-    - cron:  '*/5 * * * *'
-  push:
-    branches: [ main ]
+# on:
+#   schedule:
+#     - cron:  '*/5 * * * *'
+#   push:
+#     branches: [ main ]
 
 jobs:
   check-and-report:
